# chess_game

./: README.md
src/: CMakeLists.txt  board.c  board.h  main.c
